<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="splash_text">Bienvenidos a la mejor Asistencia Dental...</string>
    <string name="description_login">Si tienes una Cuenta puedes Ingresar a la App o si lo deseas Crear una cuenta.</string>
    <string name="text_button_login">Ingresar</string>
    <string name="or">-----o----</string>
    <string name="text_button_createAccount">Crear Cuenta</string>
    <string name="dont_have_account">¿No tienes cuenta aún?</string>
    <string name="create_here">Crea una cuenta.</string>
    <string name="hint_password">Ingresa tu Contrraseña</string>
    <string name="hint_username">Ingresa tu Correo</string>
    <string name="todo">TODO</string>
    <string name="tab_home">Inicio</string>
    <string name="tab_clinics">Clínicas</string>
    <string name="tab_chat">Chat</string>
    <string name="text_button_createaccount">Crear</string>
    <string name="hint_confirm_password">Confirma tu Contraseña</string>
    <string name="hint_user">Nombre Completo</string>
    <string name="hint_email">Correo eléctronico</string>
    <string name="hint_lastname">Apellidos</string>
    <string name="number">Numero Teléfonico</string>
    <string name="hint_country">País</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tab_notification">Notificaciones</string>
    <string name="filter">Filtrar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="myporfile">Mi Perfil</string>
    <string name="myvisits">Mis Visitas</string>
    <string name="subscriptions">Subscripciones</string>
    <string name="cupon">Validar Cupón</string>
    <string name="pregunta1">¿Puedo Ayudarte en Algo?</string>
    <string name="tab_map">Mapa</string>
    <string name="title_activity_maps">Map</string>
    <string name="cupon_entry">Ingrese su Cupón y Obtenga su Subscripción</string>
    <string name="validar">Validar Código</string>
    <string name="consejodelDía">Consejo del Día</string>
    <string name="cuponCanje">Canjear Cupón</string>
    <string name="comentario">Ingrese su Comentario</string>
    <string name="coments">Comentarios</string>
    <string name="motivo">Consulta Regular</string>
    <string name="myname">Eliseo Israel Monjes Reyes</string>
    <string name="name">Nombre</string>
    <string name="nameFull">Eliseo Israel</string>
    <string name="nameLast">Apellidos</string>
    <string name="lastName">Monjes Reyes</string>
    <string name="email">israelmonjesreyes@gmail.com</string>
    <string name="numero">Teléfono</string>
    <string name="myNumber">5958-1631</string>
    <string name="fecha">Fecha de Nacimiento</string>
    <string name="fechaNacimiento">09/enero/1998</string>
    <string name="km">1.5km</string>
    <string name="clinica">Clinicas Martinez</string>
    <string name="genero">Genero</string>
    <string name="hombre">Hombre</string>
    <string name="subscription">Subscripción</string>
    <string name="gratis">Gratis</string>
    <string name="país">País</string>
    <string name="guatemala">Guatemala(+502)</string>
    <string name="changePassword">Cambiar Contraseña</string>
    <string name="recibos">Recibos</string>
    <string name="Entryname">Ingresa Tu Nombre</string>
    <string name="Entrylastname">Ingresa Tu Apellido</string>
    <string name="Entryphone">Ingresa Tu Teléfono</string>
    <string name="Entryemail">Ingresa Tu Correo</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="enviar_recibo">Enviar Recibo</string>
    <string name="sendRecibo">Enviar Recibo</string>
    <string name="entryNew">Ingresa Tu Nueva Contraseña</string>
</resources>