<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.fragments.BlankFragment"
    android:orientation="vertical">
    <include layout="@layout/action_toolbar"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/username_email_icon"
            android:tint="@color/editTextColorWhite" />

        <LinearLayout
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/editTextColorWhite"
                android:textStyle="normal"
                android:text="@string/myporfile"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/myname"
                android:textColor="@color/editTextColorWhite"
                android:textSize="20sp"
                android:textStyle="normal" />
        </LinearLayout>
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            
            <LinearLayout
                android:layout_width="115dp"
                android:layout_height="45dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                android:gravity="center">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:textColor="@color/editTextColorWhite"
                 android:text="@string/name"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/nameFull"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="115dp"
                    android:layout_height="45dp"
                    android:background="@color/colorPrimary"
                    android:orientation="vertical"
                    android:gravity="center">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/editTextColorWhite"
                        android:text="@string/nameLast"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/lastName"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="115dp"
                        android:layout_height="45dp"
                        android:background="@color/colorPrimary"
                        android:orientation="vertical"
                        android:gravity="center">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/editTextColorWhite"
                            android:text="@string/numero"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/myNumber"
                            android:gravity="center"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_gravity="center">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="115dp"
                            android:layout_height="45dp"
                            android:background="@color/colorPrimary"
                            android:orientation="vertical"
                            android:gravity="center">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textColor="@color/editTextColorWhite"
                                android:text="@string/hint_email"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:text="@string/email"
                                android:gravity="center"/>
                        </LinearLayout>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="115dp"
                                android:layout_height="45dp"
                                android:background="@color/colorPrimary"
                                android:orientation="vertical"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textSize="12sp"
                                    android:textColor="@color/editTextColorWhite"
                                    android:text="@string/fecha"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/fechaNacimiento"
                                    android:layout_gravity="center"
                                    android:gravity="center"/>
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="115dp"
                                android:layout_height="45dp"
                                android:background="@color/colorPrimary"
                                android:orientation="vertical"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/editTextColorWhite"
                                    android:text="@string/genero"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/hombre"
                                    android:layout_gravity="center"
                                    android:gravity="center"/>
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="115dp"
                                android:layout_height="45dp"
                                android:background="@color/colorPrimary"
                                android:orientation="vertical"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/editTextColorWhite"
                                    android:text="@string/subscription"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/gratis"
                                    android:layout_gravity="center"
                                    android:gravity="center"/>
                            </LinearLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="115dp"
                                android:layout_height="35dp"
                                android:background="@color/colorPrimary"
                                android:orientation="vertical"
                                android:gravity="center">
                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/editTextColorWhite"
                                    android:text="@string/país"/>
                            </LinearLayout>
                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">
                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/guatemala"
                                    android:layout_gravity="center"
                                    android:gravity="center"/>
                            </LinearLayout>
                        </LinearLayout>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:background="@drawable/lanidingpage_background"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/myPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:padding="10dp"
                    android:src="@drawable/signin_icon"
                    android:tint="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/changePassword"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>
