<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="4dp">
    <LinearLayout
        android:id="@+id/consejosdelDía"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/lanidingpage_background"
            android:orientation="vertical"
            android:layout_weight="2">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon" />
        </LinearLayout>
        <RelativeLayout
            android:layout_weight="2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/titleClinic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clinica"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="25sp"/>
            <TextView
                android:id="@+id/descriptionClinic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/consejodelDía"
                android:layout_below="@+id/titleClinic"
                android:textSize="15sp"
                android:textStyle="normal"/>
            <TextView
                android:id="@+id/kilometros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/km"
                android:layout_alignParentBottom="true"
                android:gravity="end"
                android:layout_alignParentEnd="true"
                android:textStyle="bold"
                android:textSize="25sp"/>
        </RelativeLayout>
    </LinearLayout>


</android.support.v7.widget.CardView>